feat: Initialize Spring Boot application with IDE settings and a DES utility class.